base rf prediction submission

--- a/Student Test Scores Prediction/playground-series-s6e1/Test_score prediction.ipynb
+++ b/Student Test Scores Prediction/playground-series-s6e1/Test_score prediction.ipynb
@@ -1625,8 +1625,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "8f91bfd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_rf = forest.predict(X_test_2_transformed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "1e5d3903",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission_1 = pd.read_csv('sample_submission.csv')\n",
+    "\n",
+    "submission_1['exam_score'] = y_pred_rf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "1acb5e9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "csv saved successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "submission_1.to_csv('submission_1.csv', index = False)\n",
+    "\n",
+    "print('csv saved successfully')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e50290f1",
    "metadata": {},
    "outputs": [],
    "source": []
